--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "clean": "pnpm clean:bundle && pnpm clean:turbo && pnpm clean:node_modules",
     "clean:install": "pnpm clean:node_modules && pnpm install --frozen-lockfile",
     "type-check": "turbo type-check",
+    "type-check:filter": "turbo type-check --filter",
+    "type-check:options": "pnpm --filter @extension/options type-check",
+    "type-check:popup": "pnpm --filter @extension/popup type-check",
+    "type-check:sidepanel": "pnpm --filter @extension/sidepanel type-check",
     "base-build": "pnpm clean:bundle && turbo build",
     "build": "pnpm set-global-env && pnpm base-build",
     "build:firefox": "pnpm set-global-env CLI_CEB_FIREFOX=true && pnpm base-build",
