--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite",
+  "name": "bookmarks-manager",
   "version": "0.5.0",
-  "description": "chrome extension boilerplate",
+  "description": "一个功能强大的浏览器书签管理扩展",
   "license": "MIT",
   "private": true,
   "sideEffects": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+    "url": "https://github.com/Adonis0123/bookmarks-manager-extension.git"
   },
   "type": "module",
   "scripts": {
